# neutron-studio

./: .gitignore  README.md  _config.yml  _redirects  config.toml  index.md  package-lock.json  package.json  pelicanconf.py  pubcrank.hjson  pubcrank.yml  publishconf.py  pyproject.toml
.github/workflows/: publish.yml
_layouts/: blog.html  default.html  post.html
_posts/: 2019-08-02-modern-day-groom-of-the-stool.md  2021-05-10-leaking-as-a-feature.md  2021-07-06-android-privacy-protocol.md  2021-12-28-streaming-setup.md  2021-12-28-welcome-to-jekyll.md  2022-08-09-weatherkit-python.md
assets/: neutron.css
assets/church/: streaming-setup.excalidraw
blog/: index.md
content/: _index.md  contact.md  demo.md  index.md
content/blog/: convert.py  index.md
content/posts/: 2019-08-02-modern-day-groom-of-the-stool.md  2021-05-10-leaking-as-a-feature.md  2021-07-06-android-privacy-protocol.md  2021-12-28-streaming-setup.md  2022-08-09-weatherkit-python.md  2023-01-15-docker-compose-for-dev.md  2023-01-31-graphql-in-python.md  2023-02-01-graphql-in-python.md  2023-06-04-parcel-and-vue-is-love.md  2023-08-14-tmux-plugins-ubuntu.md  2023-09-06-set-default-sound-ubuntu.md  2024-03-05-static-sites-on-fly.md  2024-03-09-introducing-pubcrank.md  2024-03-21-sqlite-hotness.md  2024-10-26-sync-user-ids.md
content/talks/: 2024-04-joshua-generation.md  2024-04-joshua-pattern.md  2024-11-10-async-django.md  2025-01-06-async-django.md  2025-02-01-authories-darkness.md  2026-03-07-prodigals.md  (+3 more)
docs/: 404.html  CNAME  index.html  index.xml  sitemap.xml
src/: projects.js
(+154 files in other folders)
