[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Paul Bailey", email = "paul@neutron.studio"},
]
dependencies = [
    "pelican[markdown]>=4.7.1",
]
requires-python = ">=3.9"
license = {text = "None"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
